log

Wed 13 Mar 2024 08:38:01 PM UTC: 
 tests:  0|7
total_score: 0/70
1d762fd
Wed 13 Mar 2024 08:43:20 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:17: error: expected expression before ‘]’ token
   13 |   int max = arr[];
      |                 ^
Compilation failed
b6e329b
Wed 13 Mar 2024 08:44:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
bbd1b3d
Wed 13 Mar 2024 08:48:57 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
a0bb704
